# collective-memory

./: .CLAUDE.MD  .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.web  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
api/: __init__.py  config.py  migration_manager.py  migrations.py
api/models/: __init__.py  activity.py  agent.py  agent_checkpoint.py  base.py  chat_message.py  client.py  commit.py  conversation.py  document.py  domain.py  entity.py  key.py  message.py  message_read.py  metric.py  model.py  persona.py  project.py  project_repository.py  relationship.py  repository.py  repository_stats.py  session.py  table.py  table_status.py  team.py  team_project.py  user.py  work_session.py
api/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  registry.py
api/routes/: __init__.py  activities.py  agents.py  auth.py  clients.py  context.py  conversations.py  database.py  documents.py  domains.py  entities.py  github.py  knowledge.py  messages.py  metrics.py  models.py  ner.py  personas.py  projects.py  relationships.py  repositories.py  search.py  teams.py  users.py  work_sessions.py
api/scripts/: apply_key_mappings.py  generate_key_mappings.py  (+1 more)
cm_mcp/: README.md  __init__.py  __main__.py  config.py  server.py
tests/: __init__.py  conftest.py  fixtures.py  test_conversations.py  test_live_ai.py  test_live_chat_route.py  test_migrations.py  test_models.py  test_providers.py
web/: package-lock.json  package.json
(+166 files in other folders)
